# drf-auth

./: .gititnure  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
drf_auth/: settings.py  urls.py
sport/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
sport/migrations/: 0001_initial.py
